# polyline

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: lint-test-docs.yml
docs/: Makefile  conf.py  index.rst
polyline/: __init__.py  codec.py
requirements/: test.txt
src/polyline/: polyline.py
test/: test_codec.py
tests/: test_polyline.py
