[project]
name = "polyline"
version = "2.0.2"
description = "A Python implementation of Google's Encoded Polyline Algorithm Format."
license = {file = "LICENSE"}
authors = [
    {name = "Frederick Jansen"},
    {name = "Bruno M. Custódio"},
]
readme = "README.rst"
requires-python = ">=3.7"

dependencies = [
]

[project.urls]
homepage = "https://github.com/frederickjansen/polyline"
repository = "https://github.com/frederickjansen/polyline"

[project.optional-dependencies]
dev = [
    "pytest~=7.0",
    "pytest-cov~=4.0",
    "pylint~=3.0.3",
    "sphinx~=5.3.0",
    "sphinx-rtd-theme~=1.2.0",
    "toml~=0.10.2",
]
publish = [
    "build~=0.8",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=65.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=polyline --cov-report term-missing"
