[project]
name = "polyline"
version = "2.0.4"
description = "A Python implementation of Google's Encoded Polyline Algorithm Format."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Frederick Jansen"},
    {name = "Bruno M. Custódio"},
]
readme = "README.rst"
requires-python = ">=3.8"

dependencies = [
]

[project.urls]
homepage = "https://github.com/frederickjansen/polyline"
repository = "https://github.com/frederickjansen/polyline"

[project.optional-dependencies]
dev = [
    "pytest~=7.0",
    "pytest-cov~=4.0",
    "pylint~=3.0.3",
    "sphinx~=5.3.0",
    "sphinx-rtd-theme~=1.2.0",
    "standard-imghdr;python_version > '3.12'",
    "tomli;python_version < '3.11'",
]
publish = [
    "build~=0.8",
    "twine~=6.0"
]

[build-system]
requires = [
    "setuptools>=69.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=polyline --cov-report term-missing"
